turtleart.square.Square.scala.error
Compilation error:
Square:4: error: missing arguments for method right in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
  right
  ^